--- a/style.css
+++ b/style.css
@@ -50,3 +50,44 @@ body {
   font-family: "Digital-7";
   src: url("./assets/digital-7.ttf");
 }
+
+/* Estilos responsivos */
+@media (max-width: 480px) {
+  #calculator {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+    width: 100%;
+    padding: 10px;
+  }
+
+  #display {
+    font-size: 32px;
+    min-height: 60px;
+  }
+
+  .button {
+    width: 100%;
+    height: 60px;
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  #calculator {
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 5px;
+    width: 80%;
+    padding: 10px;
+  }
+
+  #display {
+    font-size: 40px;
+    min-height: 70px;
+  }
+
+  .button {
+    width: 100%;
+    height: 70px;
+    font-size: 20px;
+  }
+}
